# MainInterface

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MI  MainInterface_Android.apk  Makefile  README.md  build  build.bat  calc.cpp  calc.h  cmake_install.cmake  conv.cpp  conv.h  functions.h  keygen.cpp  keygen.h  main  main.cpp  main_linux-aarch64  makefile  modules.cpp  modules.h  shell.h
src/: RPN.cpp
toolchains/: mingw-w64-x86_64.cmake
